fixed the issue with scrolling on small screens (attempt 2)

--- a/gallery-lib/gallery.css
+++ b/gallery-lib/gallery.css
@@ -8,7 +8,7 @@
 
 .gallery-line-container {
     overflow: hidden;
-    touch-action: none;
+    touch-action: pan-y;
 }
 
 .gallery-draggable {
